--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>glob</artifactId>
-    <version>4.0.2</version>
+    <version>4.0.3-SNAPSHOT</version>
     <name>glob</name>
     <description>WebJar for glob</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/glob</url>
         <connection>scm:git:https://github.com/webjars/glob.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/glob.git</developerConnection>
-        <tag>glob-4.0.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
